# film_scanner_pc

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  korova.desktop.in  main.cpp  tasks.py  test
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_korova_88afec862e.cmake  korova-plugins.cmake
scanner_driver/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  calibrationwindow.cpp  calibrationwindow.h  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scannerwaitdialog.cpp  scannerwaitdialog.h  thumbnailcontainer.cpp  thumbnailcontainer.h  thumbnailwidget.cpp  thumbnailwidget.h
src/drivers/: CMakeLists.txt
src/drivers/scanners/: CMakeLists.txt  Knokke.cpp  Knokke.h
src/drivers/scanners/knokke_v1/: CMakeLists.txt  FTD2XXWrapper.cpp  FTD2XXWrapper.h  FTDIEnumerator.cpp  FTDIEnumerator.h  README.md  knokke_v1.cpp  knokke_v1.h
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/: Event.h  WinTypes.h  ftd2xx.h  libftd2xx.so.1.4.33  libusb.h
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/: ftd2xx.h
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/EEPROM/read/: eeprom-read.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/EEPROM/user/size/: main.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/FTX_EEPROM/read/: ftx-eeprom-read.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/FtdiPthread/: CFtdiDevice.cpp  CFtdiDevice.h  FtdiUnixHelper.h  Main.cpp  ftd2xx.h
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/LargeRead/: main.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/PassThrough/: TestCase1.c  TestCase2.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/PassThroughDisable/: DualMode.c  pdConfig.h
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/PowerDelivery/: DefaultConfig.c  ReadPD.c  WritePD.c  display.h
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/Simple/: main.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/Timeouts/: main.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/W32/events/: main.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/W32/unsupported/: main.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/loopback/: jtag.c  main.c
src/drivers/scanners/knokke_v1/d2xx/linux/linux-x86_64/examples/write/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/: ReadMe.rtf  WinTypes.h  ftd2xx.h  release-notes.txt
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/: ftd2xx.h
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/BitMode/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/EEPROM/erase/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/EEPROM/read/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/EEPROM/user/read/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/EEPROM/user/write/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/EEPROM/write/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/Events/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/MultiThread/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/SetVIDPID/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/Simple/: config.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/W32/escapeseq/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/W32/simple/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/W32/timeouts/: main.c
src/drivers/scanners/knokke_v1/d2xx/macos/Samples/static/: main.c
src/drivers/scanners/knokke_v1/d2xx/windows/: ftd2xx.h
src/drivers/structures/: CMakeLists.txt  frame.cpp  frame.h  slice.cpp  slice.h  strip.cpp  strip.h
src/examples/: CMakeLists.txt  knokke_v1_example.cpp
src/tests/: CMakeLists.txt  test_ftd2xxwrapper.cpp  test_ftdienumerator.cpp  test_knokke_v1.cpp  test_knokke_v1_16bit.cpp  test_knokke_v1_dual_interface.cpp  test_knokke_v1_integration.cpp  test_opencv.cpp
